crates/bc-cli/tests/cli/snapshots/cli__report__annual_empty.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Annual report: 2026 (0 transactions)
----- stderr -----
