crates/bc-cli/tests/cli/snapshots/cli__report__budget_stub.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
----- stderr -----
report budget: requires Milestone 5 — not yet implemented
