crates/bc-cli/tests/cli/snapshots/cli__report__categories_custom_period_is_rejected.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: --period custom is not supported by report commands; they expose no --duration-* flags to configure it
