crates/bc-cli/tests/cli/snapshots/cli__report__categories_depth_zero_is_rejected.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: --depth 0 would show no rows; the minimum is 1
