crates/bc-cli/tests/cli/snapshots/cli__report__categories_fy_conflicts_with_date.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: the argument '--fy <YEAR>' cannot be used with '--date <YYYY-MM-DD>'

Usage: borrow-checker report categories --fy <YEAR>

For more information, try '--help'.
