crates/bc-cli/tests/cli/snapshots/cli__report__categories_fy_totals_a_transaction_in_the_financial_year.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Report: 2025-07-01 – 2026-07-01 (AUD)

ACCOUNT           AMOUNT
Checking          100.00
Interest         -100.00
----- stderr -----
