crates/bc-cli/tests/cli/snapshots/cli__report__categories_rounds_the_table_but_not_the_json@table.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Report: 2025-07-01 – 2026-07-01 (AUD)

ACCOUNT           AMOUNT
Checking           12.35
Interest          -12.35
----- stderr -----
