crates/bc-cli/tests/cli/snapshots/cli__report__categories_unresolvable_tag_errors_json.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: no tag matches path 'no-such-tag'
